--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,5 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 .idea
-src/crednetials.json
+src/credentials.json
 src/token.json
